# rle-assessment-report

./: .gitignore  .nojekyll  0.1_foreword.html  0.1_foreword.qmd  0.2_preface.html  0.2_preface.qmd  0.3_acknowledgments.html  0.4_coordinating-orgs.html  0.4_coordinating-orgs.qmd  0.5_summary.html  03_acknowledgments.qmd  04_coordinating-orgs.qmd  05_summary.qmd  1_intro.html  1_intro.qmd  EARTHENGINE_SETUP.md  README.md  _quarto.yml  acknowledgments.qmd  appendix_1.html  appendix_1.qmd  assessment_outcomes.html  assessment_outcomes.qmd  build_country_maps.py  build_ecosystem_assessments.py  coordinating-orgs.qmd  ecosystem_overview.html  ecosystem_overview.qmd  foreword.qmd  index.html  index.md  index.qmd  intro.qmd  myst.yml  preface.qmd  pyproject.toml  recommendations.html  recommendations.qmd  references.bib  references.html  (+3 more)
.claude/: settings.json
.claude/commands/: preview.md  render.md
.github/workflows/: deploy.yml  publish.yml
assessments/: overview.html  overview.qmd  tanintharyi_island_rainforest.html  tanintharyi_island_rainforest.qmd  tanintharyi_sundaic_lowland_evergreen_forest.html  tanintharyi_sundaic_lowland_evergreen_forest.qmd
config/: country_config.yaml
config/ecosystem_config/: MMR-T1.1.1.yaml  MMR-T1.1.3.yaml  SAMPLE.yaml
content/: 0.1_foreword.html  0.1_foreword.md  0.2_preface.html  0.2_preface.md  0.3_acknowledgments.html  0.3_acknowledgments.md  0.4_burmese.html  0.4_burmese.md  0.4_coordinating-orgs.html  0.4_coordinating-orgs.md  0.5_summary.html  0.5_summary.md  1_intro.html  1_intro.md  1_intro.qmd  2_ecosystem_overview.html  2_ecosystem_overview.md  3_ecosystem_description.html  3_ecosystem_description.md  4_assessment_outcomes.html  4_assessment_outcomes.md  5_recommendations.html  5_recommendations.md  6_references.html  6_references.md  7_glossary.html  7_glossary.md  8_presentation.qmd  Intro_to_IUCN_RLE.md  appendix_1.html  appendix_1.md  plugin_example.md  test.bib  test.md
content_templates/: Intro_to_IUCN_RLE.qmd  TEMPLATE_ecosystem_assessment.jinja
ecosystem_assessments/: MMR-T1.1.1.html  MMR-T1.1.1.qmd  MMR-T1.1.3.html  MMR-T1.1.3.qmd  SAMPLE.qmd  TEMPLATE_ecosystem_assessment.qmd  overview.html
ecosystem_assessments/MMR-T1.1.1/: MMR-T1.1.1.html  MMR-T1.1.1.qmd  MMR-T1.1.1_crit_b_test.ipynb
ecosystem_assessments/MMR-T1.1.3/: MMR-T1.1.3.html  MMR-T1.1.3.qmd
ecosystem_config/: MMR-T1.1.1.yaml  MMR-T1.1.3.yaml  SAMPLE.yaml
presentation/: index.html  index.qmd
scripts/: 01_export_aoi_grid_images.py  ECOSYSTEM_CONFIG_PLUGIN.md  build_country_maps.py  build_ecosystem_assessments.py  ecosystem_config_plugin.py  setup-workload-identity.sh
setup/: EARTHENGINE_SETUP.html  EARTHENGINE_SETUP.md  workload-identity-config.txt
test/: test_fly_to.ipynb
(+25 files in other folders)
