[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
name = "rle-assessment-report"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["quarto>=0.1.0,<0.2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
rle_assessment_report = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.11"
quarto = ">=1.8.24,<2"
pyyaml = ">=6.0.2,<7"
jupyter = ">=1.1.1,<2"
yaml = ">=0.2.5,<0.3"
deno = ">=2.3.1,<2.4"
ipykernel = ">=6.30.1,<7"
wcwidth = ">=0.2.13,<0.3"
prompt-toolkit = ">=3.0.52,<4"
