[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
name = "rle-assessment-report"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["quarto>=0.1.0,<0.2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
rle_assessment_report = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.11"
quarto = ">=1.8.24,<2"
pyyaml = ">=6.0.3,<7"
jupyter = ">=1.1.1,<2"
yaml = ">=0.2.5,<0.3"
deno = ">=2.3.1,<2.4"
ipykernel = ">=7.1.0,<8"
wcwidth = ">=0.2.13,<0.3"
prompt-toolkit = ">=3.0.52,<4"
nbformat = ">=5.10.4,<6"
nbclient = ">=0.10.2,<0.11"
