[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
name = "rle-assessment-report"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["quarto>=0.1.0,<0.2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/rle_assessment_report"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
rle_assessment_report = { path = ".", editable = true }
gee-redlist-python = { git = "https://github.com/VorGeo/gee-redlist-python.git" }
geoarrow-pyarrow = "*"
lonboard = "==0.13.0"

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.11"
quarto = ">=1.8.24,<2"
pyyaml = ">=6.0.3,<7"
jupyter = ">=1.1.1,<2"
yaml = ">=0.2.5,<0.3"
deno = ">=2.3.1,<2.4"
ipykernel = ">=7.1.0,<8"
wcwidth = ">=0.2.13,<0.3"
prompt-toolkit = ">=3.0.52,<4"
nbformat = ">=5.10.4,<6"
nbclient = ">=0.10.2,<0.11"
proj = ">=9.7.0,<10"
gdal = ">=3.12.0,<4"
numpy = ">=2.3.5,<3"
matplotlib = ">=3.10.8,<4"
# lonboard moved to pypi-dependencies for version 0.13.0
geopandas = ">=1.1.1,<2"
pyarrow = ">=22.0.0,<23"
